--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -6,7 +6,7 @@ name: 中青看点
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 * * * *'
+     - cron: '*/31 9-23 * * *'
   watch:
     types: started
 
